# mcp-gerrit

./: README.md  mcp.json  pyproject.toml  requirements.txt
src/core/: gerrit_service.py
src/data/: gerrit_api.py
src/gerrit/: __init__.py  cli.py  server.py
src/providers/: gerrit_provider.py
src/servers/: gerrit_service.py  main.py
src/transport/: cli.py  rest.py
src/types/: gerrit_types.py
src/utils/: logger.py
